--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
           <div class="resume-content">
             <h3 class="mb-0">CENTRE DE FORMATION ENERGIE</h3>
             <div class="subheading mb-3">Niveau 1er annee Baccalaureat Technicien Superieur</div>
-            <div>ASSISTANTE DE GESTION PME/PMI</div>
-            <p></p>
+            <p>ASSISTANTE DE GESTION PME/PMI</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2007</span>
@@ -200,8 +199,7 @@
           <div class="resume-content">
             <h3 class="mb-0">LYCEE PROFESSIONNEL DUCHARMOY</h3>
             <div class="subheading mb-3">Baccalauréat Professionnel</div>
-            <div>SECRETARIAT</div>
-            <p></p>
+            <p>SECRETARIAT</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2005</span>
@@ -212,8 +210,7 @@
           <div class="resume-content">
             <h3 class="mb-0">LYCEE PROFESSIONNEL DUCHARMOY</h3>
             <div class="subheading mb-3">Brevet d'Etude Professionel</div>
-            <div>METIER DU SECRETARIAT</div>
-            <p></p>
+            <p>METIER DU SECRETARIAT</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2002</span>
